--- a/index.html
+++ b/index.html
@@ -3,12 +3,20 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title></title>
-    <meta name="description" content="" />
+    <title>Spots</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="" />
+    <meta name="author" content="Software Engineer" />
+    <meta name="description" content="" />
+    <meta name="keywords" content="HTML, CSS" />
+    <link rel="stylesheet" href="pages/index.css" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <header>SPOTS!!</header>
+    <header>
+      <div class="page">
+        <header class="header"></header>
+        <main class="content"></main>
+      </div>
+    </header>
   </body>
 </html>
