--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <div class="page">
         <header class="header"></header>
         <main class="content"></main>
+        <footer class="footer"></footer>
       </div>
     </header>
   </body>
